--- a/recipe.html
+++ b/recipe.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Penut Butter Cookies</title>
-    <meta charset="utf-8">  
+    <title>Peanut Butter Cookies</title>
+    <meta charset="UTF-8">  
     <meta name="description" content="A tasty gluten free recipe for peanut butter cookies.">
     <meta name="keywords" content="gluten free cookies, gluten free recipes, peanut butter cookie, gluten free peanutbutter cookies">
     <meta name="author" content="Rebecca Mushtare">
     <meta name="designer" content="Rebecca Mushtare">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">        
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">        
 </head>
 
  <body>
      <header> 
        <p>Name of the website</p>           
      </header>
-     
-       <main>
+      <main>
          <article>
                 <header>
                  <h1>Gluten Free Peanut Butter Cookies</h1> 
